--- a/index.html
+++ b/index.html
@@ -12,13 +12,37 @@
     <!-- online -->
     <!-- Compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <link rel="stylesheet" href="master.css">
     <title>Grocery Manager</title>
 </head>
 
 <body>
-    <div class="container">
-        Hello World!.. It's Udaya M.
+    <div class="container-fluid">
+        <nav class="nav-extended  light-blue darken-3">
+            <div class="nav-wrapper">
+             
+                <!-- <span class="nav-title no-padding"><h1>Grocery Manager</h1> </span> -->
+                <ul class="right ">
+                    <li class="active"><a class="active">Home</a></li>
+                    <li><a>Dash Board</a></li>
+                    <li><a>Settings</a></li>
+                </ul>
+            </div>
+           
+        </nav>
+
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- offline -->
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
