--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" id="main">
         <nav class="nav-extended  light-blue darken-3">
             <div class="nav-wrapper">
-             
-                <!-- <span class="nav-title no-padding"><h1>Grocery Manager</h1> </span> -->
-                <ul class="right ">
-                    <li class="active"><a class="active">Home</a></li>
-                    <li><a>Dash Board</a></li>
-                    <li><a>Settings</a></li>
+                <ul class="right" id="navBar">
+                    <li class="active"><a id="homeButton">Home</a></li>
+                    <li><a id="dashBoardButton">Dash Board</a></li>
+                    <li><a id="settingsButton">Settings</a></li>
                 </ul>
             </div>
-           
         </nav>
-
+        <div class="container-fluid" id="home" style="display: block;">
+           <h1>Home</h1> 
+        </div>
+        <div class="container-fluid" id="dashBoard" style="display: none;">
+           <h1>Dash Board</h1> 
+        </div>
+        <div class="container-fluid" id="settings" style="display: none;">
+           <h1>Settings</h1> 
+        </div>
     </div>
-
-
-
 
 
 
@@ -49,6 +51,7 @@
     <!-- online -->
     <!-- Compiled and minified JavaScript -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+    <script src="app.js"></script>
 </body>
 
 </html>
