--- a/index.html
+++ b/index.html
@@ -34,53 +34,56 @@
                 <div class="heading">
                     Add product
                 </div>
-                <div class="row product">
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix"> shopping_cart</i>
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix "> shopping_cart</i>
                         <input type="text" id="autocomplete-input" class="autocomplete">
                         <label for="autocomplete-input">Product Name</label>
                     </div>
-                    <div class="input-field col s6">
+                    <div class="input-field col s12">
                         <i class="material-icons prefix"> monetization_on</i>
-                        <input type="number" id="amount" >
-                        <label for="amount">Amount</label>
+                        <input type="number" id="amount">
+                        <label for="amount">Amount pre unit</label>
                     </div>
-                </div>
-                <div class="row">
-                    <button class="btn waves-effect waves-light right" type="submit" name="action">Submit
-                    <i class="material-icons right">send</i>
-                </button>
-                </div>
-                
-
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">  loupe</i>
+                        <input type="number" id="count">
+                        <label for="count">Count pre unit</label>
+                    </div>
+                    <button class="btn waves-effect waves-light right light-blue darken-3" type="submit" name="action">Add
+                        <i class="material-icons right">send</i>
+                    </button>
             </div>
+            
 
 
-
-
-
-            <div class="container-fluid" id="dashBoard" style="display: none;">
-                <h1>Dash Board</h1>
-            </div>
-            <div class="container-fluid" id="settings" style="display: none;">
-                <h1>Settings</h1>
-            </div>
         </div>
 
 
 
 
 
+        <div class="container-fluid" id="dashBoard" style="display: none;">
+            <h1>Dash Board</h1>
+        </div>
+        <div class="container-fluid" id="settings" style="display: none;">
+            <h1>Settings</h1>
+        </div>
+    </div>
 
 
 
 
-        <!-- offline -->
-        <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-        <!-- online -->
-        <!-- Compiled and minified JavaScript -->
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
-        <script src="app.js"></script>
+
+
+
+
+
+    <!-- offline -->
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+    <!-- online -->
+    <!-- Compiled and minified JavaScript -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+    <script src="app.js"></script>
 </body>
 
 </html>
