--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                     <div class="input-field col s12">
                         <i class="material-icons prefix"> monetization_on</i>
                         <input type="number" id="amount">
-                        <label for="amount">Amount pre unit</label>
+                        <label for="amount">Amount per unit</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">  loupe</i>
                         <input type="number" id="count">
-                        <label for="count">Count pre unit</label>
+                        <label for="count">Count per unit</label>
                     </div>
                     <button class="btn waves-effect waves-light right light-blue darken-3" type="submit" name="action">Add
                         <i class="material-icons right">send</i>
@@ -56,6 +56,8 @@
             
 
 
+
+            
         </div>
 
 
@@ -83,6 +85,7 @@
     <!-- online -->
     <!-- Compiled and minified JavaScript -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+    <script src="ui.js"></script>
     <script src="app.js"></script>
 </body>
 
