--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 </ul>
             </div>
         </nav>
+
+
+
         <div class="container-fluid" id="home" style="display: block;">
 
 
@@ -34,30 +37,31 @@
                 <div class="heading">
                     Add product
                 </div>
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix "> shopping_cart</i>
-                        <input type="text" id="autocomplete-input" class="autocomplete">
-                        <label for="autocomplete-input">Product Name</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix"> monetization_on</i>
-                        <input type="number" id="amount">
-                        <label for="amount">Amount per unit</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">  loupe</i>
-                        <input type="number" id="count">
-                        <label for="count">Count per unit</label>
-                    </div>
-                    <button class="btn waves-effect waves-light right light-blue darken-3" type="submit" name="action">Add
-                        <i class="material-icons right">send</i>
-                    </button>
+                <div class="input-field col s12">
+                    <i class="material-icons prefix "> shopping_cart</i>
+                    <input type="text" id="product-name" class="autocomplete">
+                    <label for="product-name">Product Name</label>
+                </div>
+                <div class="input-field col s12">
+                    <i class="material-icons prefix"> monetization_on</i>
+                    <input type="number" id="amount">
+                    <label for="amount">Amount per unit</label>
+                </div>
+                <div class="input-field col s12">
+                    <i class="material-icons prefix"> loupe</i>
+                    <input type="number" id="count">
+                    <label for="count">Count per unit</label>
+                </div>
+                <!-- <div class="aleart"></div> -->
+                <button class="btn waves-effect waves-light right light-blue darken-3" type="submit" name="action" id="addProduct">Add
+                    <i class="material-icons right">send</i>
+                </button>
             </div>
-            
 
 
 
-            
+
+
         </div>
 
 
