input box transition fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix "> shopping_cart</i>
                     <input type="text" id="product-name" class="autocomplete">
-                    <label for="product-name">Product Name</label>
+                    <label for="product-name" class="">Product Name</label>
                 </div>
                 <div class="input-field col s12">
                     <i class="material-icons prefix"> monetization_on</i>
@@ -52,7 +52,7 @@
                     <input type="number" id="count">
                     <label for="count">Count per unit</label>
                 </div>
-                <!-- <div class="aleart"></div> -->
+                <!-- <div class="alert-invalid"></div> -->
                 <button class="btn waves-effect waves-light right light-blue darken-3" type="submit" name="action" id="addProduct">Add
                     <i class="material-icons right">send</i>
                 </button>
