local storage delete button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="container-fluid" id="main">
-        <nav class="nav-extended  light-blue darken-3">
+        <nav class="nav-extended  light-blue darken-3 ">
             <div class="nav-wrapper">
                 <ul class="right" id="navBar">
                     <li class="active"><a id="homeButton">Home</a></li>
@@ -53,26 +53,39 @@
                     <label for="count">Count per unit</label>
                 </div>
                 <!-- <div class="alert-invalid"></div> -->
-                <button class="btn waves-effect waves-light right light-blue darken-3" type="submit" name="action" id="addProduct">Add
+                <button class="btn waves-effect waves-light right light-blue darken-3" type="submit" name="action"
+                    id="addProduct">Add
                     <i class="material-icons right">send</i>
                 </button>
             </div>
 
-
-
-
-
         </div>
-
-
-
-
 
         <div class="container-fluid" id="dashBoard" style="display: none;">
             <h1>Dash Board</h1>
         </div>
+
+
         <div class="container-fluid" id="settings" style="display: none;">
-            <h1>Settings</h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col s12">
+                        <div class="card light-blue darken-3">
+                            <div class="card-content white-text">
+                                <span class="card-title center-align">Delete All Data</span>
+                                <p>On deleting all of your data on products will be deleted permanently and can't be retrieved</p>
+                            </div>
+
+                        </div>
+                        <button class="btn waves-effect waves-light right red darken-3" type="submit"
+                            name="action" id="delete-data">Delete
+                            <i class="material-icons right">delete_forever</i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 
