added time line display of elements

--- a/index.html
+++ b/index.html
@@ -58,8 +58,21 @@
                     <i class="material-icons right">send</i>
                 </button>
             </div>
+            <div class="container time-line row rounded z-depth-5 ">
+                <div class="heading">
+                    Time Line
+                </div>
+
+                <div class="details">
+                    <ul class="collapsible">
+                        
+                    </ul>
+                </div>
+            </div>
 
         </div>
+
+
 
         <div class="container-fluid" id="dashBoard" style="display: none;">
             <h1>Dash Board</h1>
@@ -73,12 +86,13 @@
                         <div class="card light-blue darken-3">
                             <div class="card-content white-text">
                                 <span class="card-title center-align">Delete All Data</span>
-                                <p>On deleting all of your data on products will be deleted permanently and can't be retrieved</p>
+                                <p>On deleting all of your data on products will be deleted permanently and can't be
+                                    retrieved</p>
                             </div>
 
                         </div>
-                        <button class="btn waves-effect waves-light right red darken-3" type="submit"
-                            name="action" id="delete-data">Delete
+                        <button class="btn waves-effect waves-light right red darken-3" type="submit" name="action"
+                            id="delete-data">Delete
                             <i class="material-icons right">delete_forever</i>
                         </button>
                     </div>
@@ -104,6 +118,7 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
     <script src="ui.js"></script>
     <script src="app.js"></script>
+    
 </body>
 
 </html>
