--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="container-fluid" id="home" style="display: block;">
 
 
-            <div class="container add-product row rounded z-depth-5 ">
+            <div class="container add-product row rounded z-depth-2 ">
                 <div class="heading">
-                    Add product
+                    Add product to time line
                 </div>
                 <div class="input-field col s12">
                     <i class="material-icons prefix "> shopping_cart</i>
@@ -58,9 +58,9 @@
                     <i class="material-icons right">send</i>
                 </button>
             </div>
-            <div class="container time-line row rounded z-depth-5 ">
-                <div class="heading">
-                    Time Line
+            <div class="container time-line row rounded z-depth-2 ">
+                <div class="heading ">
+                    Time line
                 </div>
 
                 <div class="details">
