added sweet alert to delet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- online -->
     <!-- Compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="master.css">
     <title>Grocery Manager</title>
 </head>
