--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="master.css">
+    <link rel="icon" href="images\supermarket-2.png">
     <title>Grocery Manager</title>
 </head>
 
