added  input validation

--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
                 </div>
                 <div class="create-product-form row rounded z-depth-2" style="display: none;">
                     <div class="heading">
-                        New Product
+                        Add New Product
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix "> shopping_cart</i>
-                        <input type="text" id="product-name" class="autocomplete">
-                        <label for="product-name" class="">Product Name</label>
+                        <input type="text" id="new-product-name" >
+                        <label for="new-product-name" class="">Product Name</label>
                     </div>
 
                     <div class="input-field col s12">
                         <i class="material-icons prefix"> monetization_on</i>
-                        <input type="number" id="amount">
-                        <label for="amount">Amount per unit</label>
+                        <input type="text" inputmode="numeric" id="new-amount">
+                        <label for="new-amount">Amount per unit</label>
                     </div>
 
 
-                    <button class="btn waves-effect waves-light right light-blue darken-2" type="submit" name="action"
+                    <button class="btn waves-effect waves-light right light-blue darken-2"  name="action"
                         id="add-product-button">Add
                         <i class="material-icons right">send</i>
                     </button>
-                    <button class="btn waves-effect waves-light right light-blue darken-2" type="submit" name="action"
+                    <button class="btn waves-effect waves-light right light-blue darken-2" s name="action"
                         id="add-product-cancel">cancel
                         <i class="material-icons right">cancel</i>
                     </button>
