--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
                 </div>
                 <div class="input-field col s12">
                     <i class="material-icons prefix "> shopping_cart</i>
-                    <input type="text" id="product-name" class="autocomplete">
-                    <label for="product-name" class="">Product Name</label>
+                    <input type="text" id="product-name-timeline" class="autocomplete">
+                    <label for="product-name-timeline" class="">Product Name</label>
                 </div>
 
 
 
                 <div class="input-field col s12">
                     <i class="material-icons prefix"> loupe</i>
-                    <input type="number" id="count">
-                    <label for="count">Count per unit</label>
+                    <input type="number" id="count-timeline">
+                    <label for="count-timeline">Count per unit</label>
                 </div>
 
                 <button class="btn waves-effect waves-light right light-blue darken-2" type="submit" name="action"
-                    id="addProduct">Add
+                    id="addProduct-timeline">Add
                     <i class="material-icons right">send</i>
 
                 </button>
