--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container create-product ">
                 <div class="row create-product-icon-box" style="display:flex;">
                     <div class="col heading">
-                        Add New Product
+                       New Product
                     </div>
 
                     <div class="col">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="create-product-form row rounded z-depth-2" style="display: none;">
                     <div class="heading">
-                        Add New Product
+                        New Product
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix "> shopping_cart</i>
