--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                        New Product
                     </div>
 
-                    <div class="col">
+                    <div class="col">  
                         <a class="btn-floating btn-large waves-effect waves-light light-blue darken-2 "
                             id="add-product-icon"><i class="material-icons">add</i></a>
                     </div>
@@ -88,7 +88,7 @@
 
                 <div class="input-field col s12">
                     <i class="material-icons prefix"> loupe</i>
-                    <input type="number" id="count-timeline">
+                    <input type="text"  inputmode="numeric" id="count-timeline">
                     <label for="count-timeline">Count per unit</label>
                 </div>
 
