--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="container create-product ">
                 <div class="row create-product-icon-box" style="display:flex;">
                     <div class="col heading">
-                       New Product
+                        New Product
                     </div>
 
-                    <div class="col">  
+                    <div class="col">
                         <a class="btn-floating btn-large waves-effect waves-light light-blue darken-2 "
                             id="add-product-icon"><i class="material-icons">add</i></a>
                     </div>
@@ -88,7 +88,7 @@
 
                 <div class="input-field col s12">
                     <i class="material-icons prefix"> loupe</i>
-                    <input type="text"  inputmode="numeric" id="count-timeline">
+                    <input type="text" inputmode="numeric" id="count-timeline">
                     <label for="count-timeline">Count per unit</label>
                 </div>
 
@@ -98,8 +98,8 @@
 
                 </button>
             </div>
-            <!-- 
-                <div class="container time-line row rounded z-depth-2" style="display: none;">
+
+            <div class="container time-line row rounded z-depth-2" style="display: block;">
                 <div class="heading ">
                     Time line
                 </div>
@@ -109,7 +109,7 @@
 
                     </ul>
                 </div>
-            </div> -->
+            </div>
 
         </div>
 
@@ -157,7 +157,7 @@
     <!-- online -->
     <!-- Compiled and minified JavaScript -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
-    
+
     <script src="app.js"></script>
 
 </body>
