--- a/index.html
+++ b/index.html
@@ -129,14 +129,16 @@
                 </div>
                 <div class="all-products">
 
-
                 </div>
             </div>
-
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+              </div>
         </div>
 
 
-        <div class="container-fluid" id="settings" style="display: none;">
+        <div class="container-fluid" id="settings" style="display: block;">
             <div class="container">
                 <div class="row">
                     <div class="col s12">
