--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
 
 
-        <div class="container-fluid" id="settings" style="display: block;">
+        <div class="container-fluid" id="settings" style="display: none;">
             <div class="container">
                 <div class="row">
                     <div class="col s12">
