nav bar changed to fixed

--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
 
 <body>
     <div class="container-fluid" id="main">
-        <nav class="nav-extended  light-blue darken-3 ">
-            <div class="nav-wrapper">
-                <ul class="right" id="navBar">
-                    <li class="active"><a id="homeButton">Home</a></li>
-                    <li><a id="dashBoardButton">Dash Board</a></li>
-                    <li><a id="settingsButton">Settings</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="navbar-fixed">
+            <nav class="nav-extended  light-blue darken-3 ">
+                <div class="nav-wrapper">
+                    <ul class="right" id="navBar">
+                        <li class="active"><a id="homeButton">Home</a></li>
+                        <li><a id="dashBoardButton">Dash Board</a></li>
+                        <li><a id="settingsButton">Settings</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
 
 
 
@@ -133,7 +136,7 @@
 
                     </div>
                 </div>
-                
+
             </div>
 
         </div>
