--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="master.css">
     <link rel="icon" href="images\supermarket-2.png">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <title>Grocery Manager</title>
 </head>
 
@@ -135,6 +136,10 @@
                     <div class="all-products">
 
                     </div>
+                </div>
+                <div class="charts rounded container z-depth-2">
+                    <div class="heading"> products</div>
+                    <canvas id="myChart"></canvas>
                 </div>
 
             </div>
