--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
                 </div>
                 <div class="charts rounded container z-depth-2">
                     <div class="heading"> products</div>
-                    <canvas id="myChart"></canvas>
+                    <div class="chart-1">
+                        <canvas id="myChart"></canvas>
+                    </div>
+                    
                 </div>
 
             </div>
