--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="charts rounded container z-depth-2">
-                    <div class="heading"> products</div>
+                    <div class="heading">All Products</div>
                     <div class="chart-1">
                         <canvas id="myChart"></canvas>
 
@@ -147,7 +147,7 @@
                     
                 </div>
                 <div class="charts rounded container z-depth-2">
-                    <div class="heading"> products and total price</div>
+                    <div class="heading">Products And Their Total Price</div>
                     <div class="chart-2">
                         <canvas id="myChart2"></canvas>
 
